Added sticky styling

--- a/less/embed.less
+++ b/less/embed.less
@@ -351,6 +351,10 @@ form.comment.hide .comment__wrap, div.comment-sent.hide .comment__wrap {
     background-size: 50px;
 }
 
+.lb-posts.sticky {
+  background: #c0ffee;
+}
+
 .lb-post {
     position: relative;
     padding: 60px 0px 20px;
