Change item embed type position on default theme. (#38)

--- a/less/embed.less
+++ b/less/embed.less
@@ -475,6 +475,18 @@ article.lb-post:after {
   margin-top: -10px;
 }
 
+.lb-type--item {
+  top: 60px;
+  left: 0px;
+}
+
+@media screen and (max-width: 680px) {
+  .lb-type--item {
+    top: 40px;
+    left: 15px;
+  }
+}
+
 .lb-type--twitter {
   background-color: #6bacdf;
   background-image: url("../images/twitter_logo_white.png");
