--- a/templates/template-item-embed.html
+++ b/templates/template-item-embed.html
@@ -1,4 +1,4 @@
-<div class="lb-type lb-type--{{ ref.item.meta.provider_name | lower }}"></div>
+<div class="lb-type lb-type--item lb-type--{{ ref.item.meta.provider_name | lower }}"></div>
 <div class="item--embed">
   <div>{{ ref.item.meta.html | safe }}</div>
 </div>
