Fix author image. (#39)

--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -17,8 +17,12 @@
   <div class="lb-author">
     {% if settings.showAuthor and item.publisher %}
       <div class="lb-author__name">{{ item.publisher.display_name }}</div>
-      {% if settings.showAuthorAvatar and item.publisher.picture_url %}
+      {% if settings.showAuthorAvatar %}
+        {% if item.publisher.picture_url %}
         <img class="lb-author__avatar" src="{{ item.publisher.picture_url }}" />
+        {% else %}
+        <div class="lb-author__avatar"></div>
+        {% endif %}
       {% endif %}
     {% endif %}
   </div>
