UI fixes + mp help text

--- a/client/app/scripts/liveblog-marketplace/views/search-panel.html
+++ b/client/app/scripts/liveblog-marketplace/views/search-panel.html
@@ -1,9 +1,7 @@
 <div>
     <div class="header">
         <div class="backlink-toolbar">
-            <ul ng-show="!editingSearch || activateSearchPane">
-                <li translate>Filter Marketers</li>
-            </ul>
+            <h4 translate>Filter Marketers</h4>
             <div class="doopen" ng-click="close()"><i class="icon-close-small"></i></div>
         </div>
     </div>
