--- a/client/app/scripts/liveblog-marketplace/styles/marketplace.scss
+++ b/client/app/scripts/liveblog-marketplace/styles/marketplace.scss
@@ -7,6 +7,12 @@ section.marketer {
 section.marketer header {
     z-index: 11;
     background: rgba(245, 245, 245, 0.9);
+
+    div.alert-info {
+        float: right;
+        margin-right: 10px;
+        margin-top: 5px;
+    }
 }
 
 section.marketer button.filter-trigger {
@@ -70,6 +76,10 @@ section.marketer div.card-list-container {
     left: 0;
     right: 0;
     overflow-y: auto;
+
+    h3 {
+        padding: 0 19px 15px;
+    }
 
     div.blogs-list {
         margin: 10px 15px;
