Renamed blog owner into marketer

--- a/client/app/scripts/liveblog-marketplace/views/blogs-list.html
+++ b/client/app/scripts/liveblog-marketplace/views/blogs-list.html
@@ -17,7 +17,7 @@
         </div>
         <div class="footer">
             <dl>
-                <dt>{{ ::'Blog owner' | translate }}:</dt>
+                <dt>{{ ::'Marketer' | translate }}:</dt>
                 <dd>{{ ::blog.marketer.name }}</dd>
                 <dt>{{ ::'Start date' | translate }}:</dt>
                 <dd><time>{{ ::blog.start_date | reldate }}</time></dd>
