fix: added theme date-format.

--- a/client/app/scripts/liveblog-themes/styles/theme-bloglist.scss
+++ b/client/app/scripts/liveblog-themes/styles/theme-bloglist.scss
@@ -36,6 +36,7 @@
             input {
                 &[type="radio"] {
                     margin-right: 8px;
+                    clear: both;
                 }
             }
         }
