--- a/client/app/scripts/liveblog-themes/views/theme-settings-modal.html
+++ b/client/app/scripts/liveblog-themes/views/theme-settings-modal.html
@@ -1,4 +1,4 @@
-<div sd-modal="" data-model="modalOpened">
+<div sd-modal="" data-model="modalOpened" class="theme-settings-modal">
     <div class="modal-header">        
         <button class="close" ng-click="vm.closeModal()"><i class="icon-close-small"></i></button>
         <h3>{{ 'Theme Settings' | translate }} : {{ vm.theme.label }}</h3>
