--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -440,6 +440,9 @@
                                     &:active {
                                         @include box-shadow(inset 0 2px 0px multiply($btnDefaultColor,rgba(0,0,0,12%)));
                                     }
+                                    &:hover {
+                                        color: #d70014;
+                                    }
                                 }
                                 .st-block-ui-btn--deny-delete {
                                     @include buttonStates(#CDCDCD, $black); // needed to give a no transparent background in order to hide the cross
