--- a/client/app/scripts/liveblog-edit/views/freetype-image.html
+++ b/client/app/scripts/liveblog-edit/views/freetype-image.html
@@ -40,7 +40,7 @@
                 </div>
             </section>
         </div>     
-        <div ng-hide="image.picture_url"><button class="btn btn--primary" ng-click="ft.openUploadModal()" translate>Upload Image</button>
+        <div ng-hide="image.picture_url">
             <div class="image-text" translate>Image has not been set so far</div>
         </div>
         <span
