Fixes for origin/devel merge.

--- a/client/app/scripts/liveblog-marketplace/views/blogs-list.html
+++ b/client/app/scripts/liveblog-marketplace/views/blogs-list.html
@@ -17,8 +17,8 @@
         </div>
         <div class="footer">
             <dl>
-                <dt>{{ ::'Blog owner' | translate }}:</dt>
-                <dd>{{ ::blog.marketer_name }}</dd>
+                <dt>{{ ::'Marketer' | translate }}:</dt>
+                <dd>{{ ::blog.marketer.name }}</dd>
                 <dt>{{ ::'Start date' | translate }}:</dt>
                 <dd><time>{{ ::blog.start_date | reldate }}</time></dd>
                 <dt>{{ ::'Category' | translate }}:</dt>
