--- a/client/app/scripts/liveblog-bloglist/views/main.html
+++ b/client/app/scripts/liveblog-bloglist/views/main.html
@@ -84,11 +84,11 @@
                         <dd ng-if="isAdmin()">{{ ::blog.blog_preferences.theme }}</dd>
                         <dt>{{ ::'Created' | translate}}:</dt>
                         <dd sd-reldate ng-model="blog._created"></dd>
-                        <dt>{{ ::'Last udpated' | translate }}:</dt>
-                        <dd><time>{{ ::blog._updated | reldate }}</time></dd>
                         <dt>{{ ::'No. of Posts' | translate }}:</dt>
                         <dd>{{ ::blog.posts_count }}</dd>
                         <dl>
+                        <dt> {{ :: 'Last updated' | translate }}:</dt>
+                        <dd ng-if="blog.lastUpdated" sd-reldate ng-model="blog.lastUpdated"></dd>
                         <dt> {{ :: 'Last posted' | translate }}:</dt>
                         <dd ng-if="blog.last_posted" sd-reldate ng-model="blog.last_posted"></dd>
                         <dd ng-if="blog.posts_count == 0"> No posts yet</dd>
