--- a/client/app/scripts/liveblog-edit/views/post.html
+++ b/client/app/scripts/liveblog-edit/views/post.html
@@ -14,7 +14,7 @@
             <div class="lb-post__figure">
                 <figure ng-class="{'avatar': (post.mainItem.item.item_type !== 'comment'),
                                    'avatar-comment': (post.mainItem.item.item_type === 'comment')}">
-                    <img class="ng-isolate-scope" data-src="post.mainItem.item.user.picture_url" sd-user-avatar="">
+                    <img class="ng-isolate-scope" src="{{post.mainItem.item.user.picture_url}}">
                 </figure>
             </div>
             <div class="lb-post__content">
@@ -23,10 +23,8 @@
                         <span class="name">{{ ::post.mainItem.item.user.display_name }}</span> | <time>{{ post._created | reldate }}</time>
                     </div>
                     <div class="inline" ng-if="post.post_status == 'open'">
-                        <span class="name">
-                            {{ ::post.mainItem.item.user.display_name || post.producer_blog_title }}
-                        </span>
-                        &nbsp;|&nbsp;
+                        <span class="name">{{ post.mainItem.item.user.display_name || post.producer_blog_title }}</span>
+                        &nbsp;|
                         <time>{{ post.published_date | reldate }}</time>
                     </div>
                     <div class="inline" ng-if="post.showUpdate">
