--- a/client/app/scripts/liveblog-marketplace/views/search-panel.html
+++ b/client/app/scripts/liveblog-marketplace/views/search-panel.html
@@ -1,9 +1,7 @@
 <div>
     <div class="header">
         <div class="backlink-toolbar">
-            <ul ng-show="!editingSearch || activateSearchPane">
-                <li translate>Filter Marketers</li>
-            </ul>
+            <h4 translate>Filter Marketers</h4>
             <div class="doopen" ng-click="close()"><i class="icon-close-small"></i></div>
         </div>
     </div>
@@ -11,57 +9,26 @@
     <div class="content">
         <div class="filter-content">
             <div
-                sd-toggle-box
-                class="filter-title"
-                data-title="{{:: 'Categories' | translate }}"
-                data-open="true">
-                <ul class="filter-box">
-                    <li
-                        ng-repeat="category in categories"
-                        ng-click="toggleFilter('category', category)">
-                        <span
-                            class="sd-checkbox"
-                            ng-checked="hasFilter('category', category)"></span>
-                        <span>{{ key | translate}} <i>{{ category }}</i></span>
-                    </li>
-                </ul>
-            </div>
-
+                lb-search-filter
+                filters="filters"
+                terms="categories"
+                title="{{:: 'Categories' | translate }}"
+                key="category"
+                id="code"></div>
             <div
-                sd-toggle-box
-                class="filter-title"
-                data-title="{{:: 'Marketers' | translate }}"
-                data-open="true">
-                <ul class="filter-box">
-                    <li
-                        ng-repeat="marketer in marketers._items track by marketer._id"
-                        ng-click="toggleFilter('marketer._id', marketer._id)">
-                        <span
-                            class="sd-checkbox"
-                            ng-checked="hasFilter('marketer._id', marketer._id)"></span>
-                        <span>{{ key | translate}} <i>{{ marketer.name }}</i></span>
-                    </li>
-                </ul>
-            </div>
-
+                lb-search-filter
+                filters="filters"
+                terms="marketers._items"
+                title="{{:: 'Marketers' | translate }}"
+                key="marketer._id"
+                id="_id"></div>
             <div
-                sd-toggle-box
-                class="filter-title"
-                data-title="{{:: 'Languages' | translate }}"
-                data-open="true">
-                <ul class="filter-box">
-                    <li
-                        ng-repeat="language in languages track by language.code"
-                        ng-click="toggleFilter('language', language.code)">
-                        <span
-                            class="sd-checkbox"
-                            ng-checked="hasFilter('language', language.code)"></span>
-                        <span>{{ key | translate}} <i>{{ language.name }}</i></span>
-                    </li>
-                </ul>
-            </div>
-
-
+                lb-search-filter
+                filters="filters"
+                terms="languages"
+                title="{{:: 'Languages' | translate }}"
+                key="language"
+                id="code"></div>
         </div>
     </div>
 
