Squashed 'server/liveblog/themes/themes_assets/classic/' changes from 041488f..78e8a61
78e8a61 fix: added classes to support design.
f368d50 fix: don't show markup if nothing there.
b5c287c fix: pass post to the `lbAuthor` directive.
cde54a5 Merge pull request #50 from liveblog/fix/empty-credit
1017ce2 Merge pull request #49 from liveblog/feature/ads-cycling
8ad0510 Merge pull request #48 from liveblog/feature/ads-logo
a8e90a9 fix: switch for not showing the `credit:` keyword.
af4d9e0 chore: build.
45a0a25 fix: output, collection and advertisements fetching.
eb96657 feature: added ads cycling

git-subtree-dir: server/liveblog/themes/themes_assets/classic
git-subtree-split: 78e8a6139492011adbb3c0d9cb89a99cfc178b8a

--- a/views/item.html
+++ b/views/item.html
@@ -15,13 +15,14 @@
             <div ng-switch-when="image" ng-if="!gallery">
                 <figure>
                     <img ng-src="{{ item.picture_url }}" ng-srcset="{{ item.picture_srcset }}" alt="{{ item.meta.caption }}" sizes="80vw"/>
-                    <figcaption translate>{{ item.meta.caption }} credit: {{ item.meta.credit }}</figcaption>
+                    <figcaption translate ng-if="item.meta.credit">{{ item.meta.caption }} credit: {{ item.meta.credit }}</figcaption>
+                    <figcaption ng-if="!item.meta.credit">{{ item.meta.caption }}</figcaption>
                 </figure>
             </div>
             <div ng-switch-when="quote">
                 <blockquote>
-                    <p>{{ item.meta.quote }}</p>
-                    <h4>{{ item.meta.credit }}</h4>
+                    <p ng-if="item.meta.quote">{{ item.meta.quote }}</p>
+                    <h4 ng-if="item.meta.credit">{{ item.meta.credit }}</h4>
                 </blockquote>
             </div>
             <article ng-switch-default lb-bind-html html-content="{{ item.text | outboundAnchors | fixMarkup }}"></article>
