--- a/views/posts.html
+++ b/views/posts.html
@@ -1,5 +1,5 @@
 <article
-         ng-repeat="post in ctrl.allPosts() track by post._id"
+         ng-repeat="post in ctrl.allPosts() track by $index"
          class="lb-post list-group-item ng-cloak "
          ng-class="['lb-mainitem-{{ post.mainItem.item_type | varname }}', {'show-author-avatar': 
                         ctrl.timeline.settings.showAuthor &&
@@ -63,7 +63,7 @@
     </span>
     <span></span>    
 
-    <div ng-repeat="item in post.items track by item._id" class="lb-item">
+    <div ng-repeat="item in post.items track by item._id" class="lb-item lb-article-{{ item.item_type | varname }}">
         <div ng-if="post.fullDetails && !$first" class="list-group-item">
             <div class="lb-timeline__header">
                 <lb-author item="item" timeline="ctrl.timeline"></lb-author>
