Added a message on preview modal

--- a/client/app/scripts/liveblog-marketplace/views/blog-preview-modal.html
+++ b/client/app/scripts/liveblog-marketplace/views/blog-preview-modal.html
@@ -35,6 +35,7 @@
                 rows="6"
                 readonly="readonly"
                 select-text-on-click>{{ currentBlog.embed }}</textarea>
+            <p><b>Note:</b> Before embedding this Live Blog on your website or publishing it elsewhere, please make sure that you first have a legal agreement with the respective blog owner. You can contact the news organisation responsible for this blog via email. When you click on the marketer's name on the left side of the menu, you will find the necessary email address.</p>
         </div>
     </div>
     <div class="modal-footer">
