--- a/templates/template-item-image.html
+++ b/templates/template-item-image.html
@@ -7,8 +7,10 @@
     {{ ref.item.meta.media.renditions.viewImage.href }} 540w" 
     alt="{{ ref.item.meta.caption }}">
   <figcaption>
-    {{ ref.item.meta.caption }} 
-    <span ng-if="ref.item.meta.credit">
+    <span ng-if="ref.item.meta.caption" class="caption">
+      {{ ref.item.meta.caption }}
+    </span>&nbsp;
+    <span ng-if="ref.item.meta.credit" class="credit">
       {{ ref.item.meta.credit }}
     </span>
   </figcaption>
