--- a/templates/template-slideshow.html
+++ b/templates/template-slideshow.html
@@ -5,4 +5,6 @@
     {% endfor %}
   </div>
   <button class="fullscreen">Fullscreen</button>
+  <button class="arrows prev">&lt;</button>
+  <button class="arrows next">&gt;</button>
 </div>
