--- a/less/slideshow.less
+++ b/less/slideshow.less
@@ -7,13 +7,21 @@ article.slideshow div.lb-item {
 }
 
 #slideshow {
+  :focus {
+    outline: none;
+  }
+
+  ::-moz-focus-inner {
+    border: 0;
+  }
+
   position: fixed;
   width: 100%;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background: pink;
+  background: rgba(0, 0, 0, 0.4);
   overflow: hidden;
 
   div.container {
@@ -25,16 +33,47 @@ article.slideshow div.lb-item {
       float: left;
       text-align: center;
       margin: 0;
+      position: relative;
 
       img {
         height: 100%;
       }
+
+      figcaption {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        color: white;
+        font-size: 20px;
+        text-shadow: 0px 0px 3px #000;
+        background: rgba(0, 0, 0, 0.4);
+      }
     }
   }
 
-  button.fullscreen {
+  button {
     position: absolute;
+    outline: none;
+    color: black;
+    font-size: 22px;
+  }
+
+  button.fullscreen {
     right: 0;
     bottom: 10px;
+  }
+
+  button.arrows {
+    top: 0;
+    height: 100%;
+  }
+
+  button.arrows.prev {
+    left: 0;
+  }
+
+  button.arrows.next {
+    right: 0;
   }
 }
