--- a/templates/template-item-embed.html
+++ b/templates/template-item-embed.html
@@ -1,4 +1,28 @@
-<div class="lb-type lb-type--embed lb-type--{{ ref.item.meta.provider_name | lower }}"></div>
-<div class="item--embed">
-  <div>{{ ref.item.meta.html | safe }}</div>
-</div>
+{% if ref.item.meta.html %}
+<div class="lb-type lb-type--embed lb-type--{{ ref.item.meta.provider_name | lower }}">{{ ref.item.meta.html }}</div>
+{% endif %}
+{% if (ref.item.meta.title or ref.item.meta.description or ref.item.meta.credit or (ref.item.meta.html and ref.item.meta.thumbnail_url)) %}
+<article class="item--embed item--embed__wrapper">
+    {% if ref.item.meta.html and ref.item.meta.thumbnail_url %}
+    <a href="{{ ref.item.meta.url }}" target="_blank" class="{{ 'item--embed__illustration' if ref.item.meta.description else 'item--embed__only-illustration' }}">
+        <img src="{{ ref.item.meta.thumbnail_url }}"/>
+   </a>
+   {% endif %}
+   {% if ref.item.meta.title or ref.item.meta.description or ref.item.meta.credit %}
+   <div class="item--embed__info">
+        {% if ref.item.meta.title %}
+        <div class="item--embed__title">
+            <a href="{{ ref.item.meta.url }}" target="_blank" title="{{ ref.item.meta.title }}"></a>
+        </div>
+        {% endif %}
+        {% if ref.item.meta.description %}
+        <div class="item--embed__description">{{ ref.item.meta.description }}</div>
+        {% endif %}
+        {% if ref.item.meta.credit %}
+        <div class="item--embed__credit">{{ ref.item.meta.credit }}</div>
+        {% endif %}
+    </div>
+    {% endif %}
+
+</article>
+{% endif %}
