--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -3,12 +3,10 @@
   data-js-post-id="{{ item._id }}">
   {% if item.sticky %}
     <div class="lb-type"></div>
+  {% elif item.lb_highlight %}
+    <div class="lb-type lb-post-highlighted"></div>
   {% else %}
     <div class="lb-type lb-type--text"></div>
-  {% endif %}
-
-  {% if item.highlight %}
-    <div class="lb-post-highlighted"></div>
   {% endif %}
 
   <div class="lb-post-date" data-js-timestamp="{{ item._updated }}">{{ item._updated  }}</div>
@@ -29,19 +27,25 @@
   <!-- end author -->
 
   <!-- item start -->
-  {% for ref in item.groups[1].refs %}
-    <div class="lb-item">
-      {% if ref.item.item_type == "embed" %}
-        {% include "template-item-embed.html" %}
-      {% elif ref.item.item_type == "image" %}
-        {% include "template-item-image.html" %}
-      {% elif ref.item.item_type == "quote" %}
-        {% include "template-item-quote.html" %}
+  <div class="items-container">
+    {% for ref in item.groups[1].refs %}
+      {% if ref.item.item_type == "image" %}
+      <div class="lb-item {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %}">
       {% else %}
-        <article>{{ ref.item.text | safe }}</article>
+      <div class="lb-item">
       {% endif %}
-    </div>
-  {% endfor %}
+        {% if ref.item.item_type == "embed" %}
+          {% include "template-item-embed.html" %}
+        {% elif ref.item.item_type == "image" %}
+          {% include "template-item-image.html" %}
+        {% elif ref.item.item_type == "quote" %}
+          {% include "template-item-quote.html" %}
+        {% else %}
+          <article>{{ ref.item.text | safe }}</article>
+        {% endif %}
+      </div>
+    {% endfor %}
+  </div>
   <!-- item end -->
 
 </article>
