--- a/client/app/scripts/liveblog-edit/styles/sir-trevor.scss
+++ b/client/app/scripts/liveblog-edit/styles/sir-trevor.scss
@@ -25,4 +25,12 @@
     p {
         font-size: inherit !important;   
     }
+    h4 {
+        font-size: 18px;
+        margin: 10px 0;
+    }
+    h5 {
+        font-size: 16px;
+        margin: 10px 0;
+    }
 }
