Fix/liveview embeds (#48)
* fix: liveview for sticky posts on top position.
* fix: way that a embed post is rendered.
* fix: full width for sticky posts on top.
* Add safe nunjucks/jinja2 filter to render embed html.

--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -15,8 +15,8 @@
   {% endif %}
 
   {% if settings.stickyPosition == 'top' and api_response.stickyPosts._items|length > 0 %}
-    <div class="timeline-body timeline-body--loaded">
-      <section class="lb-posts list-group sticky">
+    <div class="timeline-top timeline-top--loaded">
+      <section class="lb-posts list-group">
         {% for item in api_response.stickyPosts._items %}
           {% if not item.deleted %}
             {% include "template-post.html" %}
