--- a/less/embed.less
+++ b/less/embed.less
@@ -708,7 +708,7 @@ article.lb-post:after {
   margin-top: -2px;
 }
 
-.lb-post:hover .lb-post-permalink {
+.lb-post:hover .lb-post-permalink, .lb-sticky-top-post:hover .lb-post-permalink {
   visibility: visible;
 }
 
@@ -783,7 +783,7 @@ article.lb-post:after {
         margin-top: 18px;
     }
 
-    .lb-post {
+    .lb-post, .lb-sticky-top-post {
         margin: 0;
     }
 
