--- a/templates/template-item-embed.html
+++ b/templates/template-item-embed.html
@@ -1,9 +1,9 @@
 {% if ref.item.meta.html %}
-<div class="lb-type lb-type--embed lb-type--{{ ref.item.meta.provider_name | lower }}">{{ ref.item.meta.html }}</div>
+<div class="item--embed__element">{{ ref.item.meta.html | safe }}</div>
 {% endif %}
-{% if (ref.item.meta.title or ref.item.meta.description or ref.item.meta.credit or (ref.item.meta.html and ref.item.meta.thumbnail_url)) %}
+{% if (ref.item.meta.title or ref.item.meta.description or ref.item.meta.credit or (not ref.item.meta.html and ref.item.meta.thumbnail_url)) %}
 <article class="item--embed item--embed__wrapper">
-    {% if ref.item.meta.html and ref.item.meta.thumbnail_url %}
+    {% if not ref.item.meta.html and ref.item.meta.thumbnail_url %}
     <a href="{{ ref.item.meta.url }}" target="_blank" class="{{ 'item--embed__illustration' if ref.item.meta.description else 'item--embed__only-illustration' }}">
         <img src="{{ ref.item.meta.thumbnail_url }}"/>
    </a>
@@ -12,7 +12,7 @@
    <div class="item--embed__info">
         {% if ref.item.meta.title %}
         <div class="item--embed__title">
-            <a href="{{ ref.item.meta.url }}" target="_blank" title="{{ ref.item.meta.title }}"></a>
+            <a href="{{ ref.item.meta.url }}" target="_blank" title="{{ ref.item.meta.title }}">{{ ref.item.meta.title }}</a>
         </div>
         {% endif %}
         {% if ref.item.meta.description %}
