--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -1,3 +1,9 @@
+<!-- sticky position toggle -->
+{% if item.sticky and settings.stickyPosition == 'top' %}
+<article
+  class="lb-sticky-top-post list-group-item {% if settings.showGallery and item.groups[1].refs[0].item.item_type == 'image' and item.groups[1].refs|length > 1 %}slideshow{% endif %}"
+  data-js-post-id="{{ item._id }}">
+  {% else %}
 <article
   class="lb-post list-group-item show-author-avatar {% if settings.showGallery and item.groups[1].refs[0].item.item_type == 'image' and item.groups[1].refs|length > 1 %}slideshow{% endif %}"
   data-js-post-id="{{ item._id }}">
@@ -25,14 +31,16 @@
     {% endif %}
   </div>
   <!-- end author -->
+  {% endif %}
+  <!-- end sticky position toggle -->
 
   <!-- item start -->
   <div class="items-container">
     {% for ref in item.groups[1].refs %}
       {% if ref.item.item_type == "image" %}
-      <div class="lb-item {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %}">
+      <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %}">
       {% else %}
-      <div class="lb-item">
+      <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %}">
       {% endif %}
         {% if ref.item.item_type == "embed" %}
           {% include "template-item-embed.html" %}
