feature: added adblock-plus-check.
LBSD-1763

--- a/client/app/scripts/liveblog-advertising/views/main.html
+++ b/client/app/scripts/liveblog-advertising/views/main.html
@@ -6,6 +6,9 @@
         </ul>
     </div>
 </div>
+<div class="alert alert-info alert--margin-left alert-advert" ng-if="adblockDetected" translate>
+Please disable your adblocker in order to work with the advertising manager and refresh the page.
+</div>
 <section class="main-section bloglist advertising">
     <!-- ADVERTS SECTION -->
 	<div class="ad-section" ng-if="activeState === 'adverts'">
