--- a/client/app/scripts/liveblog-advertising/styles/advertising.scss
+++ b/client/app/scripts/liveblog-advertising/styles/advertising.scss
@@ -1,3 +1,8 @@
+.alert-advert {
+    margin-top: 65px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
 .advertising {
 	.button-stack.right-stack {
 		margin: 0px!important;
