--- a/templates/template-slideshow.html
+++ b/templates/template-slideshow.html
@@ -4,6 +4,7 @@
       {% include "template-item-image.html" %}
     {% endfor %}
   </div>
+  <button class="close">X</button>
   <button class="fullscreen">Fullscreen</button>
   <button class="arrows prev">&lt;</button>
   <button class="arrows next">&gt;</button>
