feature: added notification for freetypes used.
LBSD-1718

--- a/client/app/scripts/liveblog-freetypes/views/list.html
+++ b/client/app/scripts/liveblog-freetypes/views/list.html
@@ -58,7 +58,7 @@
                         <textarea ng-model="vm.dialogFreetype.template" rows="15"></textarea>
                     </div>
                     <div class="field ft-comments">
-                    * <span translate class="c">Must contain at least one variable.<span><span>&nbsp;Do not use the DOCTYPE, BODY and HEAD tags.</span><span translate>&nbsp;All used tags must be closed.</span>
+                    <span translate class="c">* Must contain at least one variable.<span><span>&nbsp;Do not use the DOCTYPE, BODY and HEAD tags.</span><span translate>&nbsp;All used tags must be closed.</span>
                     <a href="https://wiki.sourcefabric.org/x/jACMAw" target="_blank" translate>See the technical documentation for further details</a>
                     </div>
                 </fieldset>
