Added pinned post icon (#50)

--- a/less/embed.less
+++ b/less/embed.less
@@ -938,3 +938,10 @@ article.lb-post:after {
         margin: -10px 8px 0 6px;
     }
 }
+
+.lb-post-pin {
+  width: 10px;
+  position: absolute;
+  top: 55px;
+  left: 36px;
+}
