--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -9,6 +9,7 @@
   data-js-post-id="{{ item._id }}">
   {% if item.sticky %}
     <div class="lb-type"></div>
+    <img src="{{ assets_root }}images/pinpost.svg" class="lb-post-pin" />
   {% elif item.lb_highlight %}
     <div class="lb-type lb-post-highlighted"></div>
   {% else %}
