fix: plain-image directive now support error messages.
LBSD-1773

--- a/client/app/scripts/liveblog-edit/views/output-modal.html
+++ b/client/app/scripts/liveblog-edit/views/output-modal.html
@@ -107,6 +107,8 @@
                                             data-min-height="20"
                                             data-max-height="50"
                                             data-max-width="250"
+                                            data-msg-error-max="Sorry, but logo image must smaller then 250x50"
+                                            data-msg-error-min="Sorry, but logo image must be at least 20x20"
                                         ></div>
                                     </div>
                                 </div>
