--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -1,11 +1,11 @@
 <!-- sticky position toggle -->
 {% if item.sticky and settings.stickyPosition == 'top' %}
 <article
-  class="lb-sticky-top-post list-group-item {% if settings.showGallery and item.groups[1].refs[0].item.item_type == 'image' and item.groups[1].refs|length > 1 %}slideshow{% endif %}"
+  class="lb-sticky-top-post list-group-item {{ item.post_items_type }}"
   data-js-post-id="{{ item._id }}">
   {% else %}
 <article
-  class="lb-post list-group-item show-author-avatar {% if settings.showGallery and item.groups[1].refs[0].item.item_type == 'image' and item.groups[1].refs|length > 1 %}slideshow{% endif %}"
+  class="lb-post list-group-item show-author-avatar {{ item.post_items_type }}"
   data-js-post-id="{{ item._id }}">
   {% if item.sticky %}
     <div class="lb-type"></div>
