Changed analytics code style

--- a/client/app/scripts/liveblog-themes/styles/theme-bloglist.scss
+++ b/client/app/scripts/liveblog-themes/styles/theme-bloglist.scss
@@ -55,6 +55,10 @@
             margin-bottom: 6px;
             margin-top: 4px;
         }
+
+        div.text-input {
+            width: 100%;
+        }
     }
     .modal-body {
         padding: 10px 20px;
