Squashed 'server/liveblog/themes/themes_assets/default/' changes from 79710ac..0ee0ccd
0ee0ccd Feature/output advertisements (#53)
9c24660 New text for pinned post

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 0ee0ccd2b6bfaf0b6abe2bdb20b2bf09240fa4f6

--- a/less/embed.less
+++ b/less/embed.less
@@ -708,6 +708,14 @@ article.lb-post:after {
   margin-top: -2px;
 }
 
+.lb-advertisement {
+    position: absolute;
+    margin-top: -45px;
+    padding-left: 20px;
+    color: #767676;
+    font-size: 0.75rem;
+}
+
 .lb-post:hover .lb-post-permalink, .lb-sticky-top-post:hover .lb-post-permalink {
   visibility: visible;
 }
