--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -7,16 +7,23 @@
 <article
   class="lb-post list-group-item show-author-avatar {{ item.post_items_type }}"
   data-js-post-id="{{ item._id }}">
+
+
   {% if item.sticky %}
     <div class="lb-type"></div>
     <img src="{{ assets_root }}images/pinpost.svg" class="lb-post-pin" />
   {% elif item.lb_highlight %}
     <div class="lb-type lb-post-highlighted"></div>
+  {% elif item.post_items_type == "advertisement" %}
+  <div class="lb-advertisement">Advertisement</div>
   {% else %}
     <div class="lb-type lb-type--text"></div>
   {% endif %}
 
-  <div class="lb-post-date" data-js-timestamp="{{ item._updated }}">{{ item._updated  }}</div>
+  <!-- remove advertisement stylization-->
+  {% if item.post_items_type != "advertisement" %}
+
+  <div class="lb-post-date" data-js-timestamp="{{ item._updated }}">{{ item._updated }}</div>
 
   <!-- author plus avatar -->
   <div class="lb-author">
@@ -34,6 +41,8 @@
   <!-- end author -->
   {% endif %}
   <!-- end sticky position toggle -->
+  {% endif %}
+  <!-- end remove advertisement stylization-->
 
   <!-- item start -->
   <div class="items-container">
