--- a/less/embed.less
+++ b/less/embed.less
@@ -351,10 +351,6 @@ form.comment.hide .comment__wrap, div.comment-sent.hide .comment__wrap {
     background-size: 50px;
 }
 
-.lb-posts.sticky {
-  background: #c0ffee;
-}
-
 .lb-post {
     position: relative;
     padding: 60px 0px 20px;
@@ -407,6 +403,10 @@ article.lb-post:after {
     padding: 6px 0px;
     width: 40px;
     z-index: 3;
+}
+
+.lb-post-pin + .lb-post-date {
+  margin-left: 10px;
 }
 
 @media @medium {
@@ -470,6 +470,10 @@ article.lb-post:after {
 .lb-type--sticky {
   background-color: #A0A0A0;
   margin-top: 4px;
+}
+
+.sticky + .lb-posts.list-group {
+  background-size: 0px;
 }
 
 //.lb-type--embed {
@@ -648,9 +652,11 @@ article.lb-post:after {
 }
 .item--embed__title {
     font-size: 1.25em;
-    font-weight: 700;
     line-height: 1.25em;
     margin-bottom: .25em;
+}
+.item--embed__title a {
+  text-decoration: none;
 }
 .item--embed__credit {
     text-align: right;
@@ -746,6 +752,13 @@ article.lb-post:after {
 }
 .pin-drawer {
   box-shadow: 0px 1px 4px -1px rgba(0, 0, 0, 0.25);
+}
+
+.lb-post-pin {
+  float: left;
+  width: 10px;
+  margin-top: -6px;
+  margin-left: 60px;
 }
 
 .mod--hide {
@@ -945,11 +958,4 @@ article.lb-post:after {
     .lb-post-highlighted {
         margin: -10px 8px 0 6px;
     }
-}
-
-.lb-post-pin {
-  width: 10px;
-  position: absolute;
-  top: 55px;
-  left: 36px;
 }
