Squashed 'server/liveblog/themes/themes_assets/default/' changes from 79710ac..c115959
c115959 Added credit info
f8e178e Additional class in item container
eb61d5d Add missing dist file.
fca0d20 Update dist files
8102d1f pin post styles (#54)
0ee0ccd Feature/output advertisements (#53)
9c24660 New text for pinned post

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: c115959789aaa0785b4f764dbeeb2e7284e1fd32

--- a/templates/template-item-image.html
+++ b/templates/template-item-image.html
@@ -7,12 +7,16 @@
     {{ ref.item.meta.media.renditions.viewImage.href }} 540w" 
     alt="{{ ref.item.meta.caption }}">
   <figcaption>
-    <span ng-if="ref.item.meta.caption" class="caption">
-      {{ ref.item.meta.caption }}
-    </span>&nbsp;
-    <span ng-if="ref.item.meta.credit" class="credit">
-      {{ ref.item.meta.credit }}
-    </span>
+    {% if ref.item.meta.caption %}
+      <span ng-if="ref.item.meta.caption" class="caption">
+        {{ ref.item.meta.caption }}
+      </span>&nbsp;
+    {% endif %}
+    {% if ref.item.meta.credit %}
+      <span ng-if="ref.item.meta.credit" class="credit">
+        <b>Credit:</b> {{ ref.item.meta.credit }}
+      </span>
+    {% endif %}
   </figcaption>
 </figure>
 
