Squashed 'server/liveblog/themes/themes_assets/default/' changes from eb61d5d..f318b8d
f318b8d Update dist files
2039c2b general margins, added highlighted class and icon in template, font size, timeline width, scorecard changes (#55)
c115959 Added credit info
f8e178e Additional class in item container

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: f318b8dfa82b59d8d9ffb72397ccd93a52560b40

--- a/less/slideshow.less
+++ b/less/slideshow.less
@@ -2,7 +2,7 @@ article.slideshow div.items-container {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  margin: 0px 30px;
+  margin-left: 60px;
 
   div.lb-item {
     margin: 0;
@@ -43,6 +43,12 @@ article.slideshow div.items-container {
   div.lb-item.portrait img {
     width: 100%;
     height: auto;
+  }
+}
+
+@media @medium {
+  article.slideshow div.items-container {
+      margin-left: 0px;
   }
 }
 
