--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -5,15 +5,19 @@
   data-js-post-id="{{ item._id }}">
   {% else %}
 <article
-  class="lb-post list-group-item show-author-avatar {{ item.post_items_type }}"
+  class="lb-post list-group-item show-author-avatar {{ item.post_items_type }} {% if item.lb_highlight %}lb-post--highlighted{% endif %}"
   data-js-post-id="{{ item._id }}">
 
-
-  {% if item.sticky %}
+  {% if item.sticky and item.lb_highlight %}
     <div class="lb-type"></div>
-    <img src="{{ assets_root }}images/pinpost.svg" class="lb-post-pin" />
+    <img src="{{ assets_root }}images/pinpost.svg" class="pin-icon" />
+    <img src="{{ assets_root }}images/highlighted.svg" class="highlight-icon" />
+  {% elif item.sticky %}
+    <div class="lb-type"></div>
+    <img src="{{ assets_root }}images/pinpost.svg" class="pin-icon" />
   {% elif item.lb_highlight %}
-    <div class="lb-type lb-post-highlighted"></div>
+    <div class="lb-type"></div>
+    <img src="{{ assets_root }}images/highlighted.svg" class="highlight-icon" />
   {% elif item.post_items_type == "advertisement" %}
   <div class="lb-advertisement">Advertisement</div>
   {% else %}
@@ -48,9 +52,9 @@
   <div class="items-container">
     {% for ref in item.groups[1].refs %}
       {% if ref.item.item_type == "image" %}
-      <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %}">
+      <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %} {{ref.item.item_type}}">
       {% else %}
-      <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %}">
+      <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {{ref.item.item_type}}">
       {% endif %}
         {% if ref.item.item_type == "embed" %}
           {% include "template-item-embed.html" %}
