Squashed 'server/liveblog/themes/themes_assets/classic/' changes from 78e8a61..14553dc
14553dc Merge pull request #52 from aleksandarjelicic/master
0d74a4f quote fixes
675b3b2 quote fixes
d94462f Merge pull request #51 from aleksandarjelicic/master
d9f4355 permalink and social share fixes
436f4f2 fix: don't show avatar image for comments.
a45d0d3 fix: issue when collection doesn't have advertisements.
23092ac fix: don't filter sicky posts by highlight if livestream.
8479545 fix: table td,th style fixes for freetype.

git-subtree-dir: server/liveblog/themes/themes_assets/classic
git-subtree-split: 14553dc1331b0d9d331fe8ad1067485dd3af0b26

--- a/styles/embed.css
+++ b/styles/embed.css
@@ -19,6 +19,10 @@ img {
     width: auto;
     height: auto;
 }
+td, th {
+    display: table-cell;
+    vertical-align: inherit;
+}
 img.pswp__img {
     max-width: none;
     max-height: none;
@@ -412,17 +416,19 @@ article .liveblog--card {
 /* quote */
 article blockquote {
     position: relative;
-    margin: 30px 0 0 16px;
+    margin: 30px 0 0 30px;
 }
 article blockquote p {
     font-size: 1.25em;
     line-height: 1.25em;
 }
 article blockquote p:before {
-    content: "“";
+    font-family: Georgia,"Times New Roman", Serif;
     font-size: 3em;
+    content: '\201C';
     position: absolute;
-    left: -0.3em;
+    top: 0.3em;
+    left: -0.6em;
     color: #7C7C7C;
 }
 article blockquote li {
@@ -478,16 +484,22 @@ article blockquote li:before {
 .loading.ng-hide {
     opacity: 0;
 }
+.lb-post-social {
+    position: absolute;
+    top: 10px;
+    right: 50px;
+    visibility: visible;
+}
 .lb-post-permalink {
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 30px;
     visibility: visible;
 }
 .lb-post-highlighted {
     position: absolute;
     top: 10px;
-    right: 30px;
+    right: 10px;
     color: #f89406;
 }
 .toggleHighlights {
@@ -678,10 +690,10 @@ article blockquote li:before {
 /* Media queries */ 
 /* hide permalink on larger screens, show only on hover */
 @media (min-width: 1025px) {
-    .lb-post-permalink {
+    .lb-post-permalink, .lb-post-social {
         visibility: hidden;
     }
-    .lb-post:hover .lb-post-permalink {
+    .lb-post:hover .lb-post-permalink, .lb-post:hover .lb-post-social {
         visibility: visible;
     }
 }
@@ -759,11 +771,16 @@ article blockquote li:before {
     border: 1px solid #D0D0D0;
     position: absolute;
     top: 18px;
-    right: 45px;
+    right: 25px;
     z-index: 5;
     width: 140px;
     height: 24px;
 }
+
+.share-box a {
+    text-decoration: none;
+}
+
 .share-icon {
     color: #5ea9c8;
     cursor: pointer;
