Squashed 'server/liveblog/themes/themes_assets/default/' changes from a4ce981..01ad73d
01ad73d Merge pull request #60 from aleksandarjelicic/themeCss
69b0462 build
c250154 Merge pull request #59 from aleksandarjelicic/slideshow
63eb52a Merge pull request #58 from aleksandarjelicic/generalCssChanges
da11f36 Fixed js linting error
95bf8af Added images instead of text to slideshow, embed margins
1b1bd39 comment, highlighted items, embed icons

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 01ad73d75673fdfd5cd18c6dc77cacfcb4f7458b

--- a/templates/template-slideshow.html
+++ b/templates/template-slideshow.html
@@ -4,8 +4,8 @@
       {% include "template-item-image.html" %}
     {% endfor %}
   </div>
-  <button class="close">X</button>
-  <button class="fullscreen">Fullscreen</button>
-  <button class="arrows prev">&lt;</button>
-  <button class="arrows next">&gt;</button>
+  <button class="close"><img src="{{ assets_root }}images/sl_close.svg" /></button>
+  <button class="fullscreen"><img src="{{ assets_root }}images/sl_fullscreen.svg" /></button>
+  <button class="arrows prev"><img src="{{ assets_root }}images/sl_arrow_previous.svg" /></button>
+  <button class="arrows next"><img src="{{ assets_root }}images/sl_arrow_next.svg" /></button>
 </div>
