--- a/less/slideshow.less
+++ b/less/slideshow.less
@@ -92,11 +92,19 @@ article.slideshow div.items-container {
         position: absolute;
         bottom: 0;
         left: 0;
+        padding: 20px 10px 10px 10px;
         width: 100%;
         color: white;
-        font-size: 20px;
+        font-size: 1rem;
         text-shadow: 0px 0px 3px #000;
-        background: rgba(0, 0, 0, 0.4);
+        background: rgba(0,0,0,0);
+        background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
+        background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.4)));
+        background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
+        background: -o-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
+        background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
+        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 );
       }
     }
   }
@@ -109,8 +117,8 @@ article.slideshow div.items-container {
   }
 
   button.fullscreen {
-    right: 0;
-    bottom: 10px;
+    top: 0px;
+    right: 40px;
   }
 
   button.close {
