Squashed 'server/liveblog/themes/themes_assets/default/' changes from 01ad73d..40046c8
40046c8 feature: background image and logo.

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 40046c8180f5eb8d42d33f5e9a8d9b91b46adb71

--- a/less/tags.less
+++ b/less/tags.less
@@ -6,6 +6,8 @@ html {
 }
 
 body {
+    background-repeat: no-repeat;
+    background-position-x: center;
     font-family: 'Helvetica Neue', Helvetica, arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
