--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -53,10 +53,14 @@
       {% endif %}
 
       {% if settings.showLiveblogLogo %}
+        {% if output.logo_url %}
+        <img src="{{ output.logo_url }}"/>
+        {% else %}
         <a class="header-bar__logo" href="https://www.liveblog.pro" target="_blank">
           <span>Powered by</span>
           <img src="{{ assets_root }}images/lb-logo.svg" />
         </a>
+        {% endif %}
       {% endif %}
     </div>
   <!-- Header End -->
