Fixed sorting bug and some label changes

--- a/client/app/scripts/liveblog-marketplace/views/marketplace.html
+++ b/client/app/scripts/liveblog-marketplace/views/marketplace.html
@@ -12,7 +12,7 @@
             role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <i class="icon-close-small"></i>
-            </button>Ready to be a Live Blog market member? <a target="_blank" href="https://docs.google.com/a/sourcefabric.org/forms/d/1qI_odolTm9ik8ka0UbFxCKCtWJMMOMVgvWi6DUN3J7c/edit">Register here</a> and become part of unique marketplace for live content. <a target="_blank" href="https://wiki.sourcefabric.org/x/hYBzAw">Learn more</a> about how to manage and promote your live coverage.
+            </button>Ready to be a Live Blog market member? <a target="_blank" href="https://docs.google.com/a/sourcefabric.org/forms/d/1qI_odolTm9ik8ka0UbFxCKCtWJMMOMVgvWi6DUN3J7c/edit">Register here</a> and become part of a unique marketplace for live content. <a target="_blank" href="https://wiki.sourcefabric.org/x/hYBzAw">Learn more</a> about how to manage and promote your live coverage.
         </div>
         <div sd-pagination data-items="blogs" data-limit="pageLimit"></div>
     </header>
