--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -40,6 +40,13 @@
     {% endif %}
   </div>
   <!-- end author -->
+
+  <!-- permalink -->
+  <div class="lb-post-permalink">
+      <a href="google.com" id="{{ item._id }}" target="_blank">
+          <i class="icon-link icon--blue">permalink</i>
+      </a>
+  </div>
   {% endif %}
   <!-- end sticky position toggle -->
   {% endif %}
