--- a/client/app/scripts/liveblog-edit/views/scorecards.html
+++ b/client/app/scripts/liveblog-edit/views/scorecards.html
@@ -335,7 +335,7 @@
     </div>
     <div class="scorecard-top__info">
         <div>
-            <label for="match.quaters" hide-render>Quater results</label>
+            <label for="match.quaters" hide-render>Interim results</label>
             <input id="match.quaters" name="$match.quaters" class="match-quaters"/>
         </div>
         <div>
