--- a/client/app/scripts/liveblog-themes/styles/theme-bloglist.scss
+++ b/client/app/scripts/liveblog-themes/styles/theme-bloglist.scss
@@ -10,8 +10,7 @@
         display: inline-block;
         max-width: 100%;
         margin-bottom: 4px;
-        font-weight: 400;
-        font-size: 1.1em;
+        font-size: 1em;
     }
     .help-block {
         display: block;
@@ -35,6 +34,7 @@
             }
             input {
                 &[type="radio"] {
+                    margin-top: 6px;
                     margin-right: 8px;
                     clear: both;
                 }
@@ -45,6 +45,7 @@
             float: left;
             &[type="checkbox"] {
                 @include box-shadow(none);
+                margin-top: 6px;
                 margin-right: 8px;
             }
             &[type="number"] {
